force-app/main/default/objects/CampaignMember/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COI</label>
    <referenceTo>COI__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>