force-app/main/default/objects/CampaignMember/fields/Food_Selection__c.field-meta.xml
<CustomField>
    <fullName>Food_Selection__c</fullName>
    <label>Food Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chicken</fullName>
            </value>
            <value>
                <fullName>Steak</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>