force-app/main/default/objects/CampaignMember/fields/Guest_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Guest Name</label>
    <type>TextArea</type>
</CustomField>